# pio-spi

./: .gitignore  AGENTS.md  AUTOFILL_SOLUTION.md  Cargo.toml  FIFO_ANALYSIS.md  FIFO_FIX_SUMMARY.md  IMPLEMENTATION.md  PLAN_SIMPLIFY_API.md  README.md  REFACTOR_LOOP_CONSOLIDATION_PLAN.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md
.beads/: issues.jsonl
.github/: copilot-instructions.md
history/: FIFO_VERIFICATION.md  IMPLEMENTATION.md  PLAN.md  PLAN_GENERIC_INSTANCE.md  PLAN_OPEN_ISSUES.md  PLAN_READ_PHASE_DETAILED.md
src/: lib.rs  main.rs
